openshift-deployment/openshift-prod-export.yaml
apiVersion: v1
items:
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: 2019-12-06T11:46:05Z
    generation: 1
    labels:
      app: voluba-linear-backend
    name: voluba-linear-backend
    namespace: voluba-linear-backend
    resourceVersion: "71469719"
    selfLink: /apis/image.openshift.io/v1/namespaces/voluba-linear-backend/imagestreams/voluba-linear-backend
    uid: fc5ab526-181d-11ea-a659-fa163ea97e2e
  spec:
    lookupPolicy:
      local: false
- apiVersion: build.openshift.io/v1
  kind: BuildConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: 2019-12-06T11:46:05Z
    labels:
      app: voluba-linear-backend
    name: voluba-linear-backend
    namespace: voluba-linear-backend
    resourceVersion: "71469383"
    selfLink: /apis/build.openshift.io/v1/namespaces/voluba-linear-backend/buildconfigs/voluba-linear-backend
    uid: fc5f8611-181d-11ea-a659-fa163ea97e2e
  spec:
    nodeSelector: null
    output:
      to:
        kind: ImageStreamTag
        name: voluba-linear-backend:latest
    postCommit:
      script: |
        set -e
        # Without PIP_IGNORE_INSTALLED=0 the Debian version of pip would
        # re-install all dependencies in the user's home directory
        # (https://github.com/pypa/pip/issues/4222#issuecomment-417672236)
        PIP_IGNORE_INSTALLED=0 python3 -m pip install --user /source[tests]
        cd /source
        python3 -m pytest tests/
    resources: {}
    runPolicy: Serial
    source:
      git:
        ref: master
        uri: git@github.com:FZJ-INM1-BDA/voluba-linear-backend.git
      sourceSecret:
        name: github-deploy-key
      type: Git
    strategy:
      dockerStrategy:
        dockerfilePath: Dockerfile
        forcePull: true
      type: Docker
    triggers:
    - generic:
        secret: 53e40f6165a24f2f
      type: Generic
    - github:
        secret: fa13de5b296ad8be
      type: GitHub
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: 2019-12-06T11:46:05Z
    generation: 8
    labels:
      app: voluba-linear-backend
    name: voluba-linear-backend
    namespace: voluba-linear-backend
    resourceVersion: "71639032"
    selfLink: /apis/apps.openshift.io/v1/namespaces/voluba-linear-backend/deploymentconfigs/voluba-linear-backend
    uid: fc5f7cd7-181d-11ea-a659-fa163ea97e2e
  spec:
    replicas: 3
    selector:
      deploymentconfig: voluba-linear-backend
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: voluba-linear-backend
          deploymentconfig: voluba-linear-backend
      spec:
        containers:
        - env:
          - name: INSTANCE_PATH
            value: /instance
          image: docker-registry.default.svc:5000/voluba-linear-backend/voluba-linear-backend@sha256:535babfefe9f7a613e41fd5640836ce526e07bd2bd7ac4436642e5b5ebeed7bb
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 60
          name: voluba-linear-backend
          ports:
          - containerPort: 8080
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /instance
            name: volume-innr5
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - configMap:
            defaultMode: 420
            name: instance-dir
          name: volume-innr5
    test: false
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - voluba-linear-backend
        from:
          kind: ImageStreamTag
          name: voluba-linear-backend:latest
          namespace: voluba-linear-backend
        lastTriggeredImage: docker-registry.default.svc:5000/voluba-linear-backend/voluba-linear-backend@sha256:535babfefe9f7a613e41fd5640836ce526e07bd2bd7ac4436642e5b5ebeed7bb
      type: ImageChange
    - type: ConfigChange
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: 2019-12-06T11:46:05Z
    labels:
      app: voluba-linear-backend
    name: voluba-linear-backend
    namespace: voluba-linear-backend
    resourceVersion: "70491157"
    selfLink: /api/v1/namespaces/voluba-linear-backend/services/voluba-linear-backend
    uid: fc6ecbb1-181d-11ea-a659-fa163ea97e2e
  spec:
    clusterIP: 172.30.119.239
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deploymentconfig: voluba-linear-backend
    sessionAffinity: None
    type: ClusterIP
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: 2019-12-06T11:46:05Z
    labels:
      app: voluba-linear-backend
    name: voluba-linear-backend
    namespace: voluba-linear-backend
    resourceVersion: "70491160"
    selfLink: /apis/route.openshift.io/v1/namespaces/voluba-linear-backend/routes/voluba-linear-backend
    uid: fc5fcab0-181d-11ea-a659-fa163ea97e2e
  spec:
    host: voluba-linear-backend.apps.hbp.eu
    port:
      targetPort: 8080-tcp
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    to:
      kind: Service
      name: voluba-linear-backend
      weight: 100
    wildcardPolicy: None
- apiVersion: v1
  data:
    config.py: |
      CORS_ORIGINS = '*'
      PROXY_FIX = {
          'x_for': 1,
          'x_host': 1,
          'x_port': 1,
          'x_proto': 1,
      }
  kind: ConfigMap
  metadata:
    creationTimestamp: 2019-12-06T13:46:30Z
    name: instance-dir
    namespace: voluba-linear-backend
    resourceVersion: "70511001"
    selfLink: /api/v1/namespaces/voluba-linear-backend/configmaps/instance-dir
    uid: ce98de60-182e-11ea-a659-fa163ea97e2e
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
